# universal_rag

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py
backend/app/api/: __init__.py
backend/app/core/: chunking.py  embeddings.py  parser.py  vectordb.py
backend/app/models/: database.py
backend/app/services/: indexer.py
src/: __init__.py  config.py
src/api/: __init__.py  gradio_ui.py
src/core/: __init__.py  interfaces.py  models.py  operations.py
src/providers/: __init__.py
src/providers/embeddings/: __init__.py  base.py
src/providers/llm/: __init__.py  base.py
src/providers/storage/: __init__.py  base.py  sqlite_store.py
src/services/: __init__.py  indexer.py  rag.py  retriever.py
src/utils/: logger.py
tests/: __init__.py
tests/test_core/: __init__.py
