[project]
name = "universal-rag"
version = "0.1.0"
description = "Universal RAG System with plugin-based architecture"
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[tool.black]
line-length = 100
target-version = ["py39"]
exclude = ["dist/", "build/"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]


